RESOLVED FIXED86036
[V8] Fix issue where V8BindingPerContextData could keep the context object alive
https://bugs.webkit.org/show_bug.cgi?id=86036
Summary [V8] Fix issue where V8BindingPerContextData could keep the context object alive
Erik Arvidsson
Reported 2012-05-09 16:24:47 PDT
[V8] Fix issue where V8BindingPerContextData could keep the context object alive
Attachments
Patch (1.50 KB, patch)
2012-05-09 16:26 PDT, Erik Arvidsson
no flags
Patch (1.67 KB, patch)
2012-05-09 16:30 PDT, Erik Arvidsson
haraken: review+
Erik Arvidsson
Comment 1 2012-05-09 16:26:57 PDT
Erik Arvidsson
Comment 2 2012-05-09 16:30:47 PDT
Kentaro Hara
Comment 3 2012-05-09 16:34:49 PDT
Comment on attachment 141047 [details] Patch Looks OK.
Erik Arvidsson
Comment 4 2012-05-09 17:13:58 PDT
Note You need to log in before you can comment on or make changes to this bug.