[V8] Fix issue where V8BindingPerContextData could keep the context object alive https://bugs.webkit.org/show_bug.cgi?id=86036

Reviewed by Kentaro Hara.

This is a partial revert of http://trac.webkit.org/changeset/114320/. This keeps
the layout tests that were introduced since it turns out that
http://trac.webkit.org/changeset/114989 fixes the tests too.

Covered by: http/tests/security/isolatedWorld/context-destroy.html

* bindings/v8/V8IsolatedContext.cpp:
(WebCore::V8IsolatedContext::destroy):

Canonical link: https://commits.webkit.org/103624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116580 268f45cc-cd09-0410-ab3c-d52691b4dbfc